# contemplation-flow-web-main

./: .gitignore  Dockerfile  PERFORMANCE_OPTIMIZATIONS.md  VIDEO_GENERATION_ANALYSIS.md  deploy-render.sh  render.yaml  requirements.txt
backend/: .env  Dockerfile  Makefile  load.py  pyproject.toml  test_audio_display.py  test_audio_generation.py  test_vector_search.py
backend/alembic/: env.py
backend/alembic/versions/: 2025_07_05_1444_b8c2f9a648cb.py  2025_07_05_1525_f44ef7a8f38b.py  2025_07_05_1549_e31749688895.py  2025_07_05_1600_87847983da49.py  2025_07_06_0016_c79a76090dd3.py  2025_07_06_1015_acb52eb484f9.py  2025_07_06_1023_a433b720c32e.py  2025_07_07_1926_e6fb5e0a0c35.py  2025_07_07_1951_158fd9e1573a.py  2025_07_07_1954_76a224404db4.py  2025_07_07_2209_6df72e17152e.py  2025_07_08_2343_c66072b3b790.py  2025_08_03_2302_dec30c2ef7ae.py  2025_08_04_2100_bf454a893619.py  2025_08_04_2102_0b3c26aa1aae.py
backend/scripts/: chat.py  load_file.py
backend/src/: chunking.py  db.py  dependencies.py  middlewares.py  server.py  settings.py  wire.py
backend/src/content/: audio.py  image.py  parallel_video.py  video.py
backend/src/services/: admin.py  audio.py  auth.py  chat.py  content.py
backend/src/ui/: index.html
backend/src/ui/assets/: index-78Oc1rt6.css  index-BXbLK8GN.js
backend/src/utils/: profiler.py
backend/supabase/.temp/: pooler-url  project-ref
docs/: backend_api_requirements.md
frontend/: .env  .env.example  README.md  index.html  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/apis/: api.ts  client.ts  (+2 more)
(+13 files in other folders)
